--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "git+https://github.com/B4CKY0FC/firebase-util.js.git"
   },
   "keywords": [
-    "firebase", "firebase-util", "firebase-util",
+    "firebase", "firebase-util", "firebase-utility",
     "fb", "util", "db", "database"
   ],
   "author": "B4CKY0FC",
